2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.csproj:
	* Gui/NewOverrideCompletionData.cs: Fixed "Bug 497991 -
	  Completion of "overriding" an interface member results in a
	  call to base".

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: Changed copyright tag.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Changed assembly info.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: "overriding" interface
	  members is now public.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 495275 -
	  override completion popup no longer includes unimplemented
	  members from interfaces'.

	* Parser/NRefactoryParser.cs: 

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: fixed "Bug 497829 - MD cannot
	  open file due to NullReferenceException in C# binding".

2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpLanguageBinding.cs: Track comment tag API.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/EventCreationCompletionData.cs: Track api changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* CSharpBinding.csproj: don't require specific gtk-sharp version.
	* Gui/CSharpTextEditorCompletion.cs: fix a csc error.

2009-04-17  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpBindingCompilerManager.cs: Use
	  ToolsEnvironmentVariables from the current runtime.

2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* CSharpLanguageBinding.cs:
	* Gui/CodeGenerationPanel.cs:
	* CSharpBindingCompilerManager.cs:
	* Gui/CompilerOptionsPanelWidget.cs:
	* Project/CSharpCompilerParameters.cs: Worked on C# backend
	  binding.

2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* CSharpLanguageBinding.cs:
	* icons/csharp-project-16.png: Removed icon service.

2009-04-16  Lluis Sanchez Gual  <lluis@novell.com>
